Added style.css and Poppins font

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 	<div class="wrapper">
 		<div class="input-box">
-			<input type="text">
+			<input type="text" id="input-text">
+			<label for="input-text">Name</label>
 		</div>
 	</div>
 </body>
