--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<div class="wrapper">
 		<div class="input-box">
 			<input type="text" id="input-text">
+			<span class="underline"></span>
 			<label for="input-text">Name</label>
 		</div>
 	</div>
