--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 	<div class="wrapper">
 		<div class="input-box">
 			<input type="text" id="input-text">
-			<span class="underline"></span>
+			<div class="underline"></div>
 			<label for="input-text">Name</label>
 		</div>
 	</div>
+	<script src="./js/script.js"></script>
 </body>
 </html>
